index changing version 2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Arlo HTML 5 Template</title>
+<title>Portfolio of Arafat uddin</title>
 
 <!-- STYLES -->
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -155,43 +155,43 @@
 									</div>
 									<div class="rightbox">
 										<div class="arlo_tm_mini_title_holder">
-											<h4>I'm Alan Michaelis and <span class="arlo_tm_animation_text_word"></span></h4>
+											<h4>I'm MD Arafat Uddin and <span class="arlo_tm_animation_text_word"></span></h4>
 										</div>
 										<div class="definition">
-											<p>Hi! My name is <strong>Alan Michaelis</strong>. I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration to concept and execution, but I find the most satisfaction in seeing the finished product do everything for you that it was created to do.</p>
+											<p>Hi! My name is <strong>MD Arafat Uddin</strong>. I am a Software Engineer, and I'm very passionate and dedixcated to my work. With 2+ years experience as a professional Software Engineer/Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration to concept and execution, but I find the most satisfaction in seeing the finished product do everything for you that it was created to do.</p>
 										</div>
 										<div class="about_short_contact_wrap">
 											<ul>
 												<li>
-													<span><label>Birthday:</label> 01.07.1990</span>
+													<span><label>Birthday:</label> 01.01.1994</span>
 												</li>
 												<li>
-													<span><label>Age:</label> 28</span>
+													<span><label>Age:</label> 25</span>
 												</li>
 												<li>
-													<span><label>City:</label> New York, USA</span>
+													<span><label>City:</label> Dhaka,Bangladesh</span>
 												</li>
 												<li>
-													<span><label>Interests:</label> Soccer, UFC</span>
+													<span><label>Interests:</label> Music , Movies , Gaming</span>
 												</li>
 												<li>
-													<span><label>Study:</label> Chicago University</span>
+													<span><label>Study:</label> American International University-Bangladesh</span>
 												</li>
 												<li>
-													<span><label>Degree:</label> Master</span>
+													<span><label>Degree:</label> B.Sc. in Computer Science & Software Engineering</span>
 												</li>
-												<li>
+												<!-- <li>
 													<span><label>Website:</label> <a href="#">www.mywebsite.com</a></span>
-												</li>
-												<li>
+												</li> -->
+												<!-- <li>
 													<span><label>Mail:</label> <a href="mailto:example@gmail.com">mymail&#64;gmail.com</a></span>
-												</li>
+												</li> -->
 												<li>
-													<span><label>Phone:</label> <a href="#">+77 022 177 05 05</a></span>
+													<span><label>Phone:</label> <a href="#">+880 1674847321</a></span>
 												</li>
-												<li>
+												<!-- <li>
 													<span><label>Twitter:</label> <a href="#">&#64;myusername</a></span>
-												</li>
+												</li> -->
 											</ul>
 										</div>
 										<div class="buttons_wrap">
