--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 	<div class="arlo_tm_mobile_header_wrap">
 		<div class="main_wrap">
 			<div class="logo">
-				<img src="img/logo/mobile_logo.png" alt="" />
+				<a href="http://arafatuddin.me">
+					<img src="img/logo/mobile_logo.png" alt="" />
+				</a>
 			</div>
 			<div class="arlo_tm_trigger">
 				<div class="hamburger hamburger--collapse-r">
@@ -77,7 +79,7 @@
 		<div class="arlo_tm_leftpart_wrap">
 			<div class="leftpart_inner">
 				<div class="logo_wrap">
-					<a href="#"><img src="img/logo/desktop-logo.png" alt="" /></a>
+					<a href="http://arafatuddin.me"><img src="img/logo/desktop-logo.png" alt="" /></a>
 				</div>
 				<div class="menu_list_wrap">
 					<ul class="anchor_nav">
@@ -221,25 +223,33 @@
 									<div class="arlo_tm_mini_title_holder">
 										<h4>Some About my Abilities</h4>
 									</div>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since. Lorem Ipsum has been the industry. Lorem Ipsum has been the industry's standard dummy text since. Lorem Ipsum is simply.</p>
+									<p>I am obsessed with making things and more  obsessed withmaking things better.I am specializein PHP.</p>
 								</div>
 								<div class="rightbox">
 									<div class="progress_bar_wrap_total">
 										<div class="arlo_tm_progress_wrap" data-size="small" data-round="c" data-strip="off">
-											<div class="arlo_tm_progress" data-value="95" data-color="#000">
-												<span><span class="label">Wordpress - <span class="experience">5 years of experience</span></span><span class="number">95%</span></span>
+											<div class="arlo_tm_progress" data-value="80" data-color="#000">
+												<span><span class="label">PHP - <span class="experience">3 years of experience</span></span><span class="number">80%</span></span>
 												<div class="arlo_tm_bar_bg"><div class="arlo_tm_bar_wrap"><div class="arlo_tm_bar"></div></div></div>
 											</div>
-											<div class="arlo_tm_progress" data-value="85" data-color="#000">
-												<span><span class="label">Css - <span class="experience">3 years of experience</span></span><span class="number">85%</span></span>
+											<div class="arlo_tm_progress" data-value="65" data-color="#000">
+												<span><span class="label">Codeigniter - <span class="experience">1 years of experience</span></span><span class="number">65%</span></span>
 												<div class="arlo_tm_bar_bg"><div class="arlo_tm_bar_wrap"><div class="arlo_tm_bar"></div></div></div>
 											</div>
 											<div class="arlo_tm_progress" data-value="75" data-color="#000">
-												<span><span class="label">HTML - <span class="experience">4 years of experience</span></span><span class="number">75%</span></span>
+												<span><span class="label">HTML - <span class="experience">3 years of experience</span></span><span class="number">75%</span></span>
 												<div class="arlo_tm_bar_bg"><div class="arlo_tm_bar_wrap"><div class="arlo_tm_bar"></div></div></div>
 											</div>
-											<div class="arlo_tm_progress" data-value="90" data-color="#000">
-												<span><span class="label">After Effect - <span class="experience">6 years of experience</span></span><span class="number">90%</span></span>
+											<div class="arlo_tm_progress" data-value="75" data-color="#000">
+												<span><span class="label">Bootstrap - <span class="experience">3 years of experience</span></span><span class="number">75%</span></span>
+												<div class="arlo_tm_bar_bg"><div class="arlo_tm_bar_wrap"><div class="arlo_tm_bar"></div></div></div>
+											</div>
+											<div class="arlo_tm_progress" data-value="75" data-color="#000">
+												<span><span class="label">CSS - <span class="experience">3 years of experience</span></span><span class="number">75%</span></span>
+												<div class="arlo_tm_bar_bg"><div class="arlo_tm_bar_wrap"><div class="arlo_tm_bar"></div></div></div>
+											</div>
+											<div class="arlo_tm_progress" data-value="75" data-color="#000">
+												<span><span class="label">Javascript - <span class="experience">6 years of experience</span></span><span class="number">75%</span></span>
 												<div class="arlo_tm_bar_bg"><div class="arlo_tm_bar_wrap"><div class="arlo_tm_bar"></div></div></div>
 											</div>
 										</div>
