--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 										<div class="buttons_wrap">
 											<ul>
 												<li>
-													<a href="index.html"><span>Download CV</span></a>
+													<a href="files/MD.ARAFAT UDDIN_CV.pdf" download="cv.pdf"><span>Download CV</span></a>
 												</li>
 												<li class="anchor">
 													<a href="#contact"><span>Send Message</span></a>
@@ -365,15 +365,15 @@
 						<div class="container">
 							<div class="arlo_tm_portfolio_wrap">
 								<div class="arlo_tm_title_holder portfolio">
-									<h3>Creative Works</h3>
-									<span>Check out our latest creative works</span>
+									<h3>Projects</h3>
+									<span>Check my projects and apps</span>
 								</div>
 								<div class="arlo_tm_portfolio_titles"></div>
 								<ul class="arlo_tm_portfolio_filter">
 									<li><a href="#" class="current" data-filter="*">All</a></li>
-									<li><a href="#" data-filter=".design">Design</a></li>
-									<li><a href="#" data-filter=".photography">Photography</a></li>
-									<li><a href="#" data-filter=".development">Development</a></li>
+									<li><a href="#" data-filter=".design">Apps</a></li>
+									<li><a href="#" data-filter=".photography">Projects</a></li>
+									<!-- <li><a href="#" data-filter=".development">Development</a></li> -->
 								</ul>
 								<ul class="arlo_tm_portfolio_list gallery_zoom">
 									<li class="design">
@@ -453,10 +453,10 @@
 															<i class="xcon-quote-left"></i>
 														</div>
 														<div class="definitions_wrap">
-															<p>“Arlo team are easy to work with and helped me make amazing websites in a short amount of time. Thanks guys for works.”</p>
+															<p>“Sometimes <span style="font-style: italic; font-weight: bold;">"NOTHING"</span> is the most hardest thing to do.”</p>
 														</div>
 														<div class="name_holder">
-															<p>Antonio Baraley, CEO Founder</p>
+															<p>Tyrion Lannister, Hand of the Queen</p>
 														</div>
 													</div>
 												</li>
@@ -670,10 +670,10 @@
 									</div>
 									<div class="short_info_wrap">
 										<ul>
-											<li><p><label>Address:</label><span>123 Qwerty Avenue NYC, USA</span></p></li>
-											<li><p><label>Email:</label><span><a href="mailto:example@gmail.com">example@gmail.com</a></span></p></li>
-											<li><p><label>Phone:</label><span>+77 022 177 05 05</span></p></li>
-											<li><p><label>Website:</label><span><a href="mailto:example@gmail.com">www.yourdomain.com</a></span></p></li>
+											<li><p><label>Address:</label><span>57-Ka,Kuril,Kuratoli,Khilkhet,Dhaka</span></p></li>
+											<li><p><label>Email:</label><span><a href="mailto:arafatuddin.work@gmail.com">arafatuddin.work@gmail.com</a></span></p></li>
+											<li><p><label>Phone:</label><span>+8801674847321</span></p></li>
+											<!-- <li><p><label>Website:</label><span><a href="mailto:example@gmail.com">www.yourdomain.com</a></span></p></li> -->
 										</ul>
 									</div>
 								</div>
