--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 				<div class="leftpart_bottom">
 					<div class="social_wrap">
 						<ul>
-							<li><a href="#"><i class="xcon-facebook"></i></a></li>
-							<li><a href="#"><i class="xcon-twitter"></i></a></li>
-							<li><a href="#"><i class="xcon-linkedin"></i></a></li>
+							<li><a href="https://www.facebook.com/danpite.araf" target="_blank"><i class="xcon-facebook"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/arafatuddinwork/" target="_blank"><i class="xcon-linkedin"></i></a></li>
+							<!-- <li><a href="#"><i class="xcon-twitter"></i></a></li>
 							<li><a href="#"><i class="xcon-instagram"></i></a></li>
-							<li><a href="#"><i class="xcon-behance"></i></a></li>
+							<li><a href="#"><i class="xcon-behance"></i></a></li> -->
 						</ul>
 					</div>
 				</div>
@@ -460,7 +460,7 @@
 														</div>
 													</div>
 												</li>
-												<li class="item">
+												<!-- <li class="item">
 													<div class="inner">
 														<div class="quotebox_wrap">
 															<i class="xcon-quote-left"></i>
@@ -485,7 +485,7 @@
 															<p>Torren Winston, Photographer.</p>
 														</div>
 													</div>
-												</li>
+												</li> -->
 											</ul>
 										</div>
 									</div>
@@ -503,26 +503,26 @@
 							<ul class="arlo_tm_counter_list arlo_tm_miniboxes">
 								<li>
 									<div class="inner arlo_tm_minibox">
-										<h3><span><span class="arlo_tm_counter" data-from="0" data-to="2222" data-speed="3000">0</span></span></h3>
+										<h3><span><span class="arlo_tm_counter" data-from="0" data-to="5" data-speed="3000">0</span></span></h3>
 										<span>Projects Completed</span>
 									</div>
 								</li>
 								<li>
 									<div class="inner arlo_tm_minibox">
-										<h3><span><span class="arlo_tm_counter" data-from="0" data-to="333" data-speed="3000">0</span>K</span></h3>
+										<h3><span><span class="arlo_tm_counter" data-from="0" data-to="5000" data-speed="3000">0</span>+</span></h3>
 										<span>Lines of Code</span>
 									</div>
 								</li>
 								<li>
 									<div class="inner arlo_tm_minibox">
-										<h3><span><span class="arlo_tm_counter" data-from="0" data-to="8888" data-speed="3000">0</span></span></h3>
-										<span>Happy Clients</span>
+										<h3><span class="arlo_tm_counter" data-from="0" data-to="7" data-speed="3000">0</span></h3>
+										<span>Apps</span>
 									</div>
 								</li>
 								<li>
 									<div class="inner arlo_tm_minibox">
-										<h3><span><span class="arlo_tm_counter" data-from="0" data-to="777" data-speed="3000">0</span>+</span></h3>
-										<span>My Awwwards</span>
+										<h3><span><span class="arlo_tm_counter" data-from="0" data-to="10" data-speed="3000">0</span>+</span></h3>
+										<span>Happy Clients</span>
 									</div>
 								</li>
 							</ul>
@@ -634,10 +634,10 @@
 												</div>
 												<div class="arlo_tm_popup_share_wrap">
 													<ul>
-														<li><a href="#">Facebook</a></li>
-														<li><a href="#">Twitter</a></li>
-														<li><a href="#">Linkedin</a></li>
-														<li><a href="#">Behance</a></li>
+														<li><a href="facebook.com/danpite.araf">Facebook</a></li>
+														<li><a href="linkedin.com/in/arafatuddinwork/">Linkedin</a></li>
+														<!-- <li><a href="#">Twitter</a></li>
+														<li><a href="#">Behance</a></li> -->
 													</ul>
 												</div>
 												<div class="read_more">
@@ -680,7 +680,7 @@
 								<div class="rightbox">
 									<div class="arlo_tm_contact_wrap">
 										<div class="main_input_wrap">
-											<form action="http://frenify.com/" method="post" class="contact_form" id="contact_form">
+											<form action="" class="contact_form" id="contact_form">
 												<div class="returnmessage" data-success="Your message has been received, We will contact you soon."></div>
 												<div class="empty_notice"><span>Please Fill Required Fields</span></div>
 												<div class="wrap">
@@ -693,7 +693,7 @@
 													<textarea id="message" placeholder="Your Message"></textarea>
 												</div>
 												<div class="arlo_tm_button">
-													<a id="send_message" href="#"><span>Send Message</span></a>
+													<a id="send_message" href="#" onclick="send_mail();"><span>Send Message</span></a>
 												</div>
 											</form>
 										</div>
