--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 			<div class="rightpart_inner">
 				<div class="arlo_tm_section" id="home">
 					<div class="arlo_tm_hero_header_wrap">
+						<header><h3 style="color: red;">Under Construction!!!</h3></header>
 						<div class="arlo_tm_universal_box_wrap particle jarallax" data-speed="0.1">
 							<div id="particles-js"></div>
 							<div class="particle_overlay"></div>
@@ -223,7 +224,7 @@
 									<div class="arlo_tm_mini_title_holder">
 										<h4>Some About my Abilities</h4>
 									</div>
-									<p>I am obsessed with making things and more  obsessed withmaking things better.I am specializein PHP.</p>
+									<p>I am obsessed with making things and more  obsessed with making things better.I am specialize in PHP.</p>
 								</div>
 								<div class="rightbox">
 									<div class="progress_bar_wrap_total">
@@ -377,7 +378,31 @@
 								</ul>
 								<ul class="arlo_tm_portfolio_list gallery_zoom">
 									<li class="design">
-										<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Aoc Productions" data-category="Design">
+										<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Easy Quantity Breaks" data-category="Apps">
+											<a href="portfolio-single.html">
+												<img src="img/portfolio/600x600.jpg" alt="" />
+												<div class="arlo_tm_portfolio_image_main" data-img-url="img/portfolio/1.jpg"></div>
+											</a>
+										</div>
+									</li>
+									<li class="design">
+										<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Easy SEO Sitemap" data-category="Apps">
+											<a href="portfolio-single.html">
+												<img src="img/portfolio/600x600.jpg" alt="" />
+												<div class="arlo_tm_portfolio_image_main" data-img-url="img/portfolio/1.jpg"></div>
+											</a>
+										</div>
+									</li>
+									<li class="design">
+										<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Terms & Agreement" data-category="Apps">
+											<a href="portfolio-single.html">
+												<img src="img/portfolio/600x600.jpg" alt="" />
+												<div class="arlo_tm_portfolio_image_main" data-img-url="img/portfolio/1.jpg"></div>
+											</a>
+										</div>
+									</li>
+									<li class="design">
+										<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Rocket Cart Bump" data-category="Apps">
 											<a href="portfolio-single.html">
 												<img src="img/portfolio/600x600.jpg" alt="" />
 												<div class="arlo_tm_portfolio_image_main" data-img-url="img/portfolio/1.jpg"></div>
@@ -409,7 +434,7 @@
 										</div>
 									</li>
 									<li class="design">
-										<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Creatives Castle" data-category="Design">
+										<div class="entry arlo_tm_portfolio_animation_wrap" data-title="EU GDPR Cookie Bar" data-category="Design">
 											<a href="portfolio-single-5.html">
 												<img src="img/portfolio/600x600.jpg" alt="" />
 												<div class="arlo_tm_portfolio_image_main" data-img-url="img/portfolio/5.jpg"></div>
